# story-app

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/instructions/: conventional-commits.instructions.md  kotlin-compose.instructions.md  safe-image-retrieval.instructions.md
.github/prompts/: generate-scene-prompt.prompt.md  manage-research-spike.prompt.md
app/: build.gradle.kts
assets/: prompt-log.md
assets/dialogue/: castle_courtyard_knight_dragon_brave.json  castle_courtyard_knight_dragon_grumpy.json  castle_courtyard_knight_dragon_shy.json  castle_courtyard_knight_princess_curious.json  castle_courtyard_knight_princess_kind.json  castle_courtyard_knight_princess_silly.json  castle_courtyard_princess_dragon_brave.json  castle_courtyard_princess_dragon_kind.json  castle_courtyard_princess_dragon_shy.json  castle_throne_room_knight_dragon_brave.json  castle_throne_room_knight_dragon_curious.json  castle_throne_room_knight_dragon_kind.json  catalogue.json  (+6 more)
build-logic/: settings.gradle.kts
domain/: build.gradle.kts
gradle/: libs.versions.toml
tools/: .env.example
tools/llm-eval/: README.md  pyproject.toml
tools/llm-eval/src/llm_eval/: __init__.py  results.py  runner.py  validator.py
tools/llm-eval/src/llm_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/llm-eval/src/llm_eval/providers/: __init__.py  anthropic_provider.py  base.py  config.py  google_provider.py  lmstudio_provider.py  mistral_provider.py  openai_provider.py
tools/llm-eval/tests/: test_providers.py  test_runner.py  test_validator.py
(+95 files in other folders)
